--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Davie JR's Menu</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
+  <link href="https://fonts.lug.ustc.edu.cn/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
