--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navigation Section -->
 
   <nav>
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burger-logo.svg" />
+    <img src="./img/burger-logo.svg" />
     <span><a href="#">MENU</a></span>
     <span><a href="#">NUTRITION</a></span>
     <span><a href="#">ORDER</a></span>
